--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,13 +9,22 @@ S3method(autoplot,aggRate)
 S3method(autoplot,vlm)
 S3method(nobs,aggRate)
 S3method(print,aggRate)
+S3method(vglm_fams,aggRate)
+S3method(vglm_fams,clm)
 export(aggRate)
 export(aggRate.clm)
 export(aggRate.data.frame)
 export(aggRate.formula)
 export(aggRate.vlm)
 export(autolayer.aggRate)
+export(vglm_fams)
+export(vglm_fams.aggRate)
+export(vglm_fams.clm)
+importFrom(VGAM,acat)
+importFrom(VGAM,cratio)
+importFrom(VGAM,cumulative)
 importFrom(VGAM,formulavlm)
+importFrom(VGAM,vglm)
 importFrom(ggplot2,autolayer)
 importFrom(ggplot2,autoplot)
 importFrom(ggplot2,facet_grid)
