--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,16 +7,22 @@ S3method(aggRate,vlm)
 S3method(autolayer,aggRate)
 S3method(autoplot,aggRate)
 S3method(autoplot,vlm)
+S3method(family,vlm)
 S3method(nobs,aggRate)
 S3method(print,aggRate)
 S3method(vglm_fams,aggRate)
 S3method(vglm_fams,clm)
+export(.pval.summary.vglm)
+export(.pval.vglm)
 export(aggRate)
 export(aggRate.clm)
 export(aggRate.data.frame)
 export(aggRate.formula)
 export(aggRate.vlm)
 export(autolayer.aggRate)
+export(family.vlm)
+export(getCanonicalLink.vglmff)
+export(getLink.vglmff)
 export(vglm_fams)
 export(vglm_fams.aggRate)
 export(vglm_fams.clm)
@@ -36,6 +42,7 @@ importFrom(ggplot2,scale_y_continuous)
 importFrom(matrixStats,rowCumsums)
 importFrom(reshape2,melt)
 importFrom(stats,aggregate)
+importFrom(stats,family)
 importFrom(stats,formula)
 importFrom(stats,nobs)
 importFrom(stats,predict)
