--- a/NAMESPACE
+++ b/NAMESPACE
@@ -30,6 +30,7 @@ importFrom(VGAM,acat)
 importFrom(VGAM,cratio)
 importFrom(VGAM,cumulative)
 importFrom(VGAM,formulavlm)
+importFrom(VGAM,summaryvglm)
 importFrom(VGAM,vglm)
 importFrom(ggplot2,autolayer)
 importFrom(ggplot2,autoplot)
