--- a/NAMESPACE
+++ b/NAMESPACE
@@ -23,13 +23,18 @@ export(autolayer.aggRate)
 export(family.vlm)
 export(getCanonicalLink.vglmff)
 export(getLink.vglmff)
+export(nobsText.vlm)
 export(vglm_fams)
 export(vglm_fams.aggRate)
 export(vglm_fams.clm)
+export(xlevels.vlm)
 importFrom(VGAM,acat)
 importFrom(VGAM,cratio)
 importFrom(VGAM,cumulative)
+importFrom(VGAM,familyname.vglmff)
+importFrom(VGAM,familyname.vlm)
 importFrom(VGAM,formulavlm)
+importFrom(VGAM,model.framevlm)
 importFrom(VGAM,summaryvglm)
 importFrom(VGAM,vglm)
 importFrom(ggplot2,autolayer)
@@ -42,6 +47,7 @@ importFrom(ggplot2,labs)
 importFrom(ggplot2,scale_y_continuous)
 importFrom(matrixStats,rowCumsums)
 importFrom(reshape2,melt)
+importFrom(stats,.getXlevels)
 importFrom(stats,aggregate)
 importFrom(stats,family)
 importFrom(stats,formula)
