--- a/NAMESPACE
+++ b/NAMESPACE
@@ -20,6 +20,7 @@ export(aggRate.data.frame)
 export(aggRate.formula)
 export(aggRate.vlm)
 export(autolayer.aggRate)
+export(desc_.vlm)
 export(family.vlm)
 export(getCanonicalLink.vglmff)
 export(getLink.vglmff)
