--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,10 +8,14 @@ S3method(autolayer,aggRate)
 S3method(autoplot,aggRate)
 S3method(autoplot,vlm)
 S3method(family,vlm)
+S3method(model.matrix,clm)
 S3method(nobs,aggRate)
 S3method(print,aggRate)
+S3method(terms,clmm)
 S3method(vglm_fams,aggRate)
 S3method(vglm_fams,clm)
+export(.pval.summary.clm)
+export(.pval.summary.clmm)
 export(.pval.summary.vglm)
 export(.pval.vglm)
 export(aggRate)
@@ -20,11 +24,19 @@ export(aggRate.data.frame)
 export(aggRate.formula)
 export(aggRate.vlm)
 export(autolayer.aggRate)
+export(coef0.clm)
+export(coef0.clmm)
+export(desc_.clm)
+export(desc_.clmm)
 export(desc_.vlm)
 export(family.vlm)
+export(getCanonicalLink.clm)
+export(getCanonicalLink.clmm)
 export(getCanonicalLink.vglmff)
 export(getLink.vglmff)
+export(nobsText.clmm)
 export(nobsText.vlm)
+export(terms.clmm)
 export(vglm_fams)
 export(vglm_fams.aggRate)
 export(vglm_fams.clm)
@@ -47,10 +59,15 @@ importFrom(ggplot2,label_both)
 importFrom(ggplot2,labs)
 importFrom(ggplot2,scale_y_continuous)
 importFrom(matrixStats,rowCumsums)
+importFrom(ordinal,clm)
+importFrom(ordinal,clmm)
+importFrom(ordinal,ranef)
 importFrom(reshape2,melt)
 importFrom(stats,.getXlevels)
 importFrom(stats,aggregate)
 importFrom(stats,family)
 importFrom(stats,formula)
+importFrom(stats,model.matrix)
 importFrom(stats,nobs)
 importFrom(stats,predict)
+importFrom(stats,terms)
