--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ S3method(aggRate,vlm)
 S3method(autolayer,aggRate)
 S3method(autoplot,aggRate)
 S3method(autoplot,vlm)
+S3method(confint,clmm)
 S3method(family,vlm)
 S3method(model.matrix,clm)
 S3method(nobs,aggRate)
@@ -26,6 +27,7 @@ export(aggRate.vlm)
 export(autolayer.aggRate)
 export(coef0.clm)
 export(coef0.clmm)
+export(confint.clmm)
 export(desc_.clm)
 export(desc_.clmm)
 export(desc_.vlm)
@@ -65,6 +67,8 @@ importFrom(ordinal,ranef)
 importFrom(reshape2,melt)
 importFrom(stats,.getXlevels)
 importFrom(stats,aggregate)
+importFrom(stats,confint)
+importFrom(stats,confint.default)
 importFrom(stats,family)
 importFrom(stats,formula)
 importFrom(stats,model.matrix)
