--- a/NAMESPACE
+++ b/NAMESPACE
@@ -25,8 +25,8 @@ export(aggRate.data.frame)
 export(aggRate.formula)
 export(aggRate.vlm)
 export(autolayer.aggRate)
-export(coef0.clm)
-export(coef0.clmm)
+export(coef_.clm)
+export(coef_.clmm)
 export(confint.clmm)
 export(desc_.clm)
 export(desc_.clmm)
