--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,16 +9,18 @@ S3method(autoplot,aggRate)
 S3method(autoplot,vlm)
 S3method(confint,clmm)
 S3method(family,vlm)
+S3method(model.frame,vlm)
 S3method(model.matrix,clm)
 S3method(nobs,aggRate)
 S3method(print,aggRate)
+S3method(summary,vglm)
+S3method(summary,vlm)
 S3method(terms,clmm)
 S3method(vglm_fams,aggRate)
 S3method(vglm_fams,clm)
 export(.pval.summary.clm)
 export(.pval.summary.clmm)
 export(.pval.summary.vglm)
-export(.pval.vglm)
 export(aggRate)
 export(aggRate.clm)
 export(aggRate.data.frame)
@@ -42,7 +44,6 @@ export(terms.clmm)
 export(vglm_fams)
 export(vglm_fams.aggRate)
 export(vglm_fams.clm)
-export(xlevels.vlm)
 importFrom(VGAM,acat)
 importFrom(VGAM,cratio)
 importFrom(VGAM,cumulative)
@@ -51,6 +52,7 @@ importFrom(VGAM,familyname.vlm)
 importFrom(VGAM,formulavlm)
 importFrom(VGAM,model.framevlm)
 importFrom(VGAM,summaryvglm)
+importFrom(VGAM,summaryvlm)
 importFrom(VGAM,vglm)
 importFrom(ggplot2,autolayer)
 importFrom(ggplot2,autoplot)
@@ -65,12 +67,12 @@ importFrom(ordinal,clm)
 importFrom(ordinal,clmm)
 importFrom(ordinal,ranef)
 importFrom(reshape2,melt)
-importFrom(stats,.getXlevels)
 importFrom(stats,aggregate)
 importFrom(stats,confint)
 importFrom(stats,confint.default)
 importFrom(stats,family)
 importFrom(stats,formula)
+importFrom(stats,model.frame)
 importFrom(stats,model.matrix)
 importFrom(stats,nobs)
 importFrom(stats,predict)
