--- a/NAMESPACE
+++ b/NAMESPACE
@@ -38,8 +38,11 @@ export(getCanonicalLink.clm)
 export(getCanonicalLink.clmm)
 export(getCanonicalLink.vglmff)
 export(getLink.vglmff)
+export(model.frame.vlm)
 export(nobsText.clmm)
 export(nobsText.vlm)
+export(summary.vglm)
+export(summary.vlm)
 export(terms.clmm)
 export(vglm_fams)
 export(vglm_fams.aggRate)
