--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -14,5 +14,5 @@ RoxygenNote: 7.3.2
 Encoding: UTF-8
 License: GPL-2
 Depends: R (>= 4.4), ggplot2 (== 3.5.2)
-Imports: reshape2 (== 1.4.4), matrixStats (== 1.5.0), ordinal (== 2023.12.4.1), VGAM (== 1.1.13)
+Imports: reshape2 (== 1.4.4), matrixStats (== 1.5.0), ordinal (== 2023.12.4.1), VGAM (== 1.1.13), rlang
 Suggests: MASS
