--- a/NAMESPACE
+++ b/NAMESPACE
@@ -57,6 +57,7 @@ importFrom(VGAM,model.framevlm)
 importFrom(VGAM,summaryvglm)
 importFrom(VGAM,summaryvlm)
 importFrom(VGAM,vglm)
+importFrom(ggplot2,aes)
 importFrom(ggplot2,autolayer)
 importFrom(ggplot2,autoplot)
 importFrom(ggplot2,facet_grid)
@@ -70,6 +71,7 @@ importFrom(ordinal,clm)
 importFrom(ordinal,clmm)
 importFrom(ordinal,ranef)
 importFrom(reshape2,melt)
+importFrom(rlang,.data)
 importFrom(stats,aggregate)
 importFrom(stats,confint)
 importFrom(stats,confint.default)
