--- a/NAMESPACE
+++ b/NAMESPACE
@@ -57,6 +57,7 @@ importFrom(VGAM,model.framevlm)
 importFrom(VGAM,summaryvglm)
 importFrom(VGAM,summaryvlm)
 importFrom(VGAM,vglm)
+importFrom(geomtextpath,geom_textline)
 importFrom(ggplot2,aes)
 importFrom(ggplot2,autolayer)
 importFrom(ggplot2,autoplot)
@@ -72,6 +73,7 @@ importFrom(ordinal,clmm)
 importFrom(ordinal,ranef)
 importFrom(reshape2,melt)
 importFrom(rlang,.data)
+importFrom(scales,label_percent)
 importFrom(stats,aggregate)
 importFrom(stats,confint)
 importFrom(stats,confint.default)
