--- a/NAMESPACE
+++ b/NAMESPACE
@@ -76,6 +76,7 @@ importFrom(ecip,desc_)
 importFrom(ecip,getCanonicalLink)
 importFrom(ecip,md_ecip)
 importFrom(ecip,nobsText)
+importFrom(fastmd,md_)
 importFrom(geomtextpath,geom_textline)
 importFrom(ggplot2,aes)
 importFrom(ggplot2,autolayer)
@@ -92,7 +93,6 @@ importFrom(ordinal,clmm)
 importFrom(ordinal,ranef)
 importFrom(reshape2,melt)
 importFrom(rlang,.data)
-importFrom(rmd.tzh,md_)
 importFrom(scales,label_percent)
 importFrom(stats,aggregate)
 importFrom(stats,confint)
