--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -16,7 +16,7 @@ Depends: R (>= 4.5)
 Imports: geomtextpath (== 0.2.0), ggplot2 (== 4.0.2), rlang (== 1.1.7), 
     scales (== 1.4.0), reshape2 (== 1.4.5), matrixStats (== 1.5.0), 
     ordinal (== 2025.12.29), VGAM (== 1.1.14),
-    rmd.tzh, ecip
+    fastmd, ecip
 Suggests: 
     MASS (== 7.3.65),
     knitr,
